--- a/public/css/bg-login.css
+++ b/public/css/bg-login.css
@@ -1,4 +1,7 @@
 
+body {
+	background-color: #ecf0f1;
+}
 
 .image {
 	background-image: url('http://static.wixstatic.com/media/922da6_dd9841dda4164a46b7b8ac4b00abefd6~mv2.jpg');
@@ -12,8 +15,15 @@ div#professor .image {
 
 }
 
+div#aluno .image {
+  background-image: url('/images/classroom.jpg');
+  background-color: #ecf0f1;
+
+}
+
 div .panel-heading img {
 	display: block;
 	margin-right: auto;
 	margin-left: auto;
 }
+
