--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -9,6 +9,9 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+a {
+    color: inherit;
+}
 body {
   margin: 0;
 }
