--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,7 +3,7 @@
  */
 
 html {
-  height: 100%;
+  height: 102%;
   box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 6rem;
+  padding-bottom: 1rem;
   min-height: 100%;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
@@ -45,4 +45,8 @@ body {
   background-color: #ccc;
   text-align: center;
   width: 100%;
+}
+
+.footer, .footer p {
+  font-size: 0.7em;
 }
