--- a/public/css/global.css
+++ b/public/css/global.css
@@ -251,7 +251,7 @@ div#box {
 }
 
 .box-top {
-	width: 25%;
+	width: 31%;
 	height: 95px;
 	color: #fff;
 	background: #2980b9;
@@ -311,10 +311,10 @@ div#box {
 
 
 .box2-top {
-	width: 25%;
+	width: 30%;
 	height: 95px;
 	margin-top: 14px;
-	margin-left: 15px;
+	margin-left: 4%;
 	color: #fff;
 	background: #f39c12;
 	font-weight: 300;
@@ -356,10 +356,10 @@ div#box {
 } 
 
 .box3-top {
-	width: 25%;
+	width: 30%;
 	height: 95px;
 	margin-top: 14px;
-	margin-left: 15px;
+	margin-left: 4%;
 	color: #fff;
 	background: #27ae60;
 	font-weight: 300;
@@ -411,7 +411,12 @@ div#box {
 }
 
 .chart_div {
-	float: right;
+	margin: 0;
+	float: left;
+}
+
+div#graficos {
+	margin-top: 20px;
 }
 
 @media only screen and (max-width: 480px) {
@@ -426,10 +431,15 @@ a.mobile {
 	cursor: pointer;
 }
 
+
 a.mobile:active{
 	background: #474747;
 }
 
+.conteudo{
+	margin-top: 10px;
+	padding: 5px;
+}
 
 .sidebar {
 	width: 100%;
@@ -476,13 +486,11 @@ a.mobile:active{
 } 
 
 .box-top {
-	width: 31%;
+	width: 100%;
 	height: 130px;
-	float: left;
 	color: #fff;
 	background: #2980b9;
-	padding: 5px;
-	padding-left: 15px;
+	padding: ;
 	font-weight: 300;
 	overflow: hidden;
 	border-radius: 10px;
@@ -491,15 +499,13 @@ a.mobile:active{
 }
 
 .box2-top {
-	width: 31%;
+	width: 100%;
 	height: 130px;
-	margin-left: 10px;
-	float: left;
 	color: #fff;
+	margin-left: 0;
 	text-shadow: 0 1px #000;
 	background: #f39c12;
 	padding: 5px;
-	padding-left: 15px;
 	font-weight: 300;
 	overflow: hidden;
 	border-radius: 10px;
@@ -514,15 +520,13 @@ a.mobile:active{
 } 
 
 .box3-top {
-	width: 31%;
+	width: 100%;
 	height: 130px;
-	margin-left: 10px;
-	float: left;
 	color: #fff;
+	margin-left: 0;
 	text-shadow: 0 1px #000;
 	background: #27ae60;
 	padding: 5px;
-	padding-left: 15px;
 	font-weight: 300;
 	overflow: hidden;
 	border-radius: 10px;
@@ -562,6 +566,25 @@ div#header img {
 div#header {
  position: relative !important;
 }
+
+.chart_div {
+	margin-top: 15px; 
+	padding: 0;
+	clear: both;
+}
+
+div#graficos {
+	clear: left;
+}
+
+
+.conteudo {
+	margin-top: 0;
+	margin-left: 0;
+	padding-left: 0;
+	height: 100%; 
+}
+
 
 }
 
@@ -604,7 +627,7 @@ a.mobile {
 		width: 500px;
 		height: 50px;
 		margin-top: 3px;
-		padding-right: 70px;
+		padding-right: 90px;
 	}
 
 	.footer {
@@ -626,7 +649,7 @@ a.mobile {
 	.realtime {
 	  height: 30px;
 	  margin-top: 0;
-	  margin-left: 0;
+	  margin-left: 35px;
 	  margin-right: 40px;
 	}
 
