--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,25 @@ html {
 .nav .open > a:focus {
   background-color: transparent;
 }
+
+fieldset
+{
+  padding: 15px;
+  width: 90%;
+    border:1px solid #34495e;
+    -moz-border-radius:8px;
+    -webkit-border-radius:8px;  
+    border-radius:8px;
+    margin-left: auto;
+    margin-right: auto;
+}
+legend
+{
+  margin-bottom:0px;
+  margin-left:16px;
+  margin-right: 16px;
+  width: auto;
+}
 /*-------------------------------*/
 /*           Wrappers            */
 /*-------------------------------*/
@@ -369,12 +388,18 @@ box-shadow: -4px 9px 24px -2px rgba(0,0,0,0.75);
   width  : 199px;
   height : 199px;
   border-radius : 50%;
-  background-color : grey;
+  background-color : white;
   left : -50%;
   position : relative;
   margin-top : 20px;
-  background-image : url('http://image.flaticon.com/icons/svg/149/149071.svg');
   border : solid white 4px;
+}
+
+.perfil {
+  width  : 100%;
+  height : 100%;
+  border-radius : 50%;
+  position : absolute;
 }
 
 .button-position {
@@ -402,8 +427,8 @@ box-shadow: -4px 9px 24px -2px rgba(0,0,0,0.75);
 }
 
 .modal .modal-dialog{
-  width:40%;
-  max-height: 100%;
+  width:50%;
+  max-height: 85%;
   overflow: auto;
   position: absolute;
   top:0; bottom: 0; left: 0; right: 0;
