--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,9 +36,7 @@ fieldset
 }
 legend
 {
-  margin-bottom:0px;
-  margin-left:16px;
-  margin-right: 16px;
+  padding: 20px;
   width: auto;
 }
 /*-------------------------------*/
