--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,4 +1,4 @@
-@import url('"https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('"https://fonts.googleapis.com/css?family=Merriweather');
 
 a {
     color: inherit;
@@ -15,7 +15,7 @@ p {
     color: #34495e;
 }
 body {
-	font-family:  'Open Sans';
+	font-family:  'Merriweather';
 	overflow: auto;
 }
 
