--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,15 @@
 @import "http://designmodo.github.io/Flat-UI/dist/css/flat-ui.min.css";
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css";
 @import "https://daneden.github.io/animate.css/animate.min.css";
+@import url('"https://fonts.googleapis.com/css?family=Merriweather');
+
 /*-------------------------------*/
 /*           VARIABLES           */
 /*-------------------------------*/
+
+* {
+    font-family:  'Merriweather';
+}
 body {
   position: relative;
   overflow-x: hidden;
